--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -182,4 +182,7 @@
     <string name="not_implemented_error">Еще не реализовано :(</string>
     <string name="reopen_project">Открыть проект</string>
     <string name="personal_project_for">Персональный проект для %s</string>
+    <string name="type_invited_project">пригласил вас в персональный проект</string>
+    <string name="new_personal_project">Персональный проект</string>
+    <string name="type_forum_message">сообщение в форуме проекта</string>
 </resources>
