[+] App first start language

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -197,4 +197,5 @@
     <string name="is_only_my_skills">Только моя специализация</string>
     <string name="apply">Применить</string>
     <string name="employer_not_have_active_projects">У заказчика нет активных проектов</string>
+    <string name="_1">1 (дней)</string>
 </resources>
