--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,4 +210,5 @@
     <string name="is_only_my_skills">Only my skills</string>
     <string name="apply">Apply</string>
     <string name="employer_not_have_active_projects">Employer not have active projects</string>
+    <string name="_1">1 (day)</string>
 </resources>
