--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,7 +7,7 @@
     <string name="new_work">Предложение работы</string>
     <string name="new_forum_message">Обсуждение</string>
     <string name="type_project">добавил проект</string>
-    <string name="type_like_message">Нравится ваше</string>
+    <string name="type_like_message">нравится ваше</string>
     <string name="type_work">предлагает работу над проектом</string>
     <string name="type_add_message">добавил сообщение</string>
     <string name="premium">Премиум</string>
