[+] Contests filter [non available]

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -204,4 +204,5 @@
     <string name="select_city">Выберите город</string>
     <string name="reset">Очистить</string>
     <string name="employers_filter">Фильтр заказчиков</string>
+    <string name="contests_filter">Фильтр конкурсов</string>
 </resources>
