--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,6 +198,7 @@
     <string name="type_invited_project">invited you to participate in a personal project</string>
     <string name="new_personal_project">Personal project</string>
     <string name="type_forum_message">added a message to the project forum</string>
+    <string name="type_forum_message_2">answered in the project forum</string>
     <string name="added">Added&#160;</string>
     <string name="quality">Quality</string>
     <string name="professionalism">Professionalism</string>
