--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -185,6 +185,7 @@
     <string name="type_invited_project">пригласил вас в персональный проект</string>
     <string name="new_personal_project">Персональный проект</string>
     <string name="type_forum_message">сообщение в форуме проекта</string>
+    <string name="type_forum_message_2">ответил в форуме проекта</string>
     <string name="added">Добавлено&#160;</string>
     <string name="quality">Качество</string>
     <string name="professionalism">Профессионализм</string>
