[+] Feed type "contest application appreciated"

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,6 +8,7 @@
     <string name="new_forum_message">Обсуждение</string>
     <string name="type_project">добавил проект</string>
     <string name="type_like_message">нравится ваше</string>
+    <string name="type_appreciated">оценил</string>
     <string name="type_work">предлагает работу над проектом</string>
     <string name="type_add_message">добавил сообщение</string>
     <string name="premium">Премиум</string>
