--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="new_forum_message">Discussion</string>
     <string name="type_project">added project</string>
     <string name="type_like_message">like your</string>
+    <string name="type_appreciated">appreciated</string>
     <string name="type_work">offers project work</string>
     <string name="type_add_message">add message</string>
     <string name="premium">Premium</string>
