--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -88,9 +88,12 @@
     <string name="main">Главная</string>
     <string name="notify_new_feed">Новое событие в ленте</string>
     <string name="notify_new_message">У Вас %s</string>
+    <string name="notify_new_projects">Новые проекты: %d</string>
     <string name="pref_notification_title">Уведомления</string>
-    <string name="pref_notifications_feed">Новые события в ленте</string>
-    <string name="pref_notifications_messages">Новые сообщения</string>
+    <string name="pref_notifications_feed">Лента</string>
+    <string name="pref_notifications_messages">Сообщения</string>
+    <string name="pref_notifications_projects">Проекты</string>
+    <string name="pref_notifications_projects_summary">Новые проекты согласно сохраненного фильтра</string>
     <string name="pref_notifications_interval">Периодичность проверки обновлений</string>
     <string name="pref_notification_wifi_summary">Проверять наличие обновлений только при подключении к WIFI</string>
     <string name="pref_notifications_wifi">Только WIFI</string>
