--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,9 +92,12 @@
     <string name="main">Home</string>
     <string name="notify_new_feed">New feed event</string>
     <string name="notify_new_message">You have new %s</string>
+    <string name="notify_new_projects">New projects: %d</string>
     <string name="pref_notification_title">Notifications</string>
     <string name="pref_notifications_feed">New feed events</string>
     <string name="pref_notifications_messages">New messages</string>
+    <string name="pref_notifications_projects">New projects</string>
+    <string name="pref_notifications_projects_summary">Checking for new projects, according to the saved filter</string>
     <string name="pref_notifications_interval">Refresh interval</string>
     <string name="pref_notifications_interval_default" translatable="false">60</string>
     <string name="pref_notification_wifi_summary">Check for updates only when connected to WIFI</string>
