--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,7 +138,7 @@
     <string name="open">Open…</string>
     <string name="freelancer_view">Freelancer profile</string>
     <string name="copyright">© Kokhan Ilya, 2020</string>
-    <string name="madeinchina">Made in Belarus</string>
+    <string name="madeinchina">Made in Belarus 🇧🇾</string>
     <string name="comment_is_deleted">Comment was deleted</string>
     <string name="open_in_browser">Open in browser</string>
     <string name="freelancehunt_premium" translatable="false">Freelancehunt Premium</string>
