--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -226,4 +226,15 @@
     <string name="contests_filter">Contests filter</string>
     <string name="pref_key_project_title">Project</string>
     <string name="pref_project_bids_list_reversed">Reverse bids list</string>
+    <string name="cancel_button_label">Cancel</string>
+    <string name="choose_button_label">Select</string>
+    <string name="label_parent_directory">Parent Directory</string>
+    <string name="last_edit">Last edited: %1$s, %2$s</string>
+    <string name="error_dir_access">Directory cannot be accessed</string>
+    <string name="default_dir" translatable="false">/sdcard</string>
+    <string name="label_parent_dir" translatable="false">..</string>
+    <string name="attach_selector">Select file</string>
+    <string name="permissions_denied">Permissions denied</string>
+    <string name="attach_max_size">Maximum attach filesize: %s</string>
+    <string name="size">Size: %s</string>
 </resources>
