[+] My bids by date

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -210,7 +210,7 @@
     <string name="reset">Очистить</string>
     <string name="employers_filter">Фильтр заказчиков</string>
     <string name="contests_filter">Фильтр конкурсов</string>
-    <string name="pref_key_project_title">Проект</string>
+    <string name="pref_key_lists_title">Списки</string>
     <string name="pref_project_bids_list_reversed">Ставки в обратном порядке</string>
     <string name="cancel_button_label">Отмена</string>
     <string name="choose_button_label">Выбрать</string>
