--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,12 +10,14 @@
     <string name="unknown">-</string>
     <string name="new_work">Job offer</string>
     <string name="new_forum_message">Discussion</string>
-    <string name="type_project">added project</string>
-    <string name="type_project_1" translatable="false">добавила проект</string>
-    <string name="type_like_message">like your</string>
-    <string name="type_appreciated">appreciated</string>
-    <string name="type_work">offers project work</string>
-    <string name="type_add_message">add message</string>
+    <string name="type_project">(.*?added project)</string>
+    <string name="type_project_1">(.*?added a project)</string>
+    <string name="type_like_message">(.*?like your)</string>
+    <string name="type_appreciated">(.*?appreciated)</string>
+    <string name="type_work">(.*?offers project work)</string>
+    <string name="type_add_message">(.*?add message)</string>
+    <string name="type_add_message_1">(.*?added message)</string>
+    <string name="type_add_message_2" translatable="false">(.*?added a message)</string>
     <string name="premium">Premium</string>
     <string name="safe">Safe</string>
     <string name="remote">Remote</string>
@@ -237,5 +239,6 @@
     <string name="permissions_denied">Permissions denied</string>
     <string name="attach_max_size">Maximum attach filesize: %s</string>
     <string name="size">Size: %s</string>
-    <string name="autostart_permissions_required_error">Autostart permissions require error</string>
+    <string name="autostart_permissions_required_error">The application responsible for managing the application in the background was not found. There may be problems receiving notifications.</string>
+    <string name="autostart_permissions_dialog_info">On your device, the application is limited in the background, which may lead to problems with automatic checking of new projects and messages. On the next screen, add the application to the list of exclusions or turn off optimization for it.</string>
 </resources>
