--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="github_url" translatable="false">https://github.com/HombreTech/FreelanceHunt</string>
     <string name="email" translatable="false">ilyakokhan@gmail.com</string>
     <string name="no_internet_error_message">No Internet connection available. Please try again</string>
+    <string name="internet_error_message">Request error</string>
     <string name="token_is_empty">Enter Token</string>
     <string name="new_project">New project</string>
     <string name="unknown">-</string>
@@ -238,6 +239,7 @@
     <string name="attach_selector">Select file</string>
     <string name="permissions_denied">Permissions denied</string>
     <string name="attach_max_size">Maximum attach filesize: %s</string>
+    <string name="attach_invalid_file">Forbidden file type. Allowed files only this types:\n%s</string>
     <string name="size">Size: %s</string>
     <string name="autostart_permissions_required_error">The application responsible for managing the application in the background was not found. There may be problems receiving notifications.</string>
     <string name="autostart_permissions_dialog_info">On your device, the application is limited in the background, which may lead to problems with automatic checking of new projects and messages. On the next screen, add the application to the list of exclusions or turn off optimization for it.</string>
