[+] isPlus avatar indicator [+] Developer notify

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -134,8 +134,8 @@
     <string name="send_email">Отправить email</string>
     <string name="open">Открыть…</string>
     <string name="freelancer_view">Профиль фрилансера</string>
-    <string name="copyright">© Кохан Илья, 2020</string>
-    <string name="madeinchina">Сделано в Беларуси 🇧🇾</string>
+    <string name="copyright">© Кохан Илья, 2021</string>
+    <string name="madeinchina">Сделано в Беларуси</string>
     <string name="comment_is_deleted">Комментарий удален</string>
     <string name="open_in_browser">Открыть в браузере</string>
     <string name="premium_caption">Возможность проверки обновлений чаще, чем раз в час, доступна в Premium-версии приложения. Оплатив Premium, Вы разблокируете ограничение, а главное поддержите меня как разработчика.\nПерейти к диалогу покупки?</string>
@@ -227,4 +227,6 @@
     <string name="size">Размер: %s</string>
     <string name="autostart_permissions_required_error">Приложение, ответственное за управление работой приложения в фоне, не найдено. Возможны проблемы с получением уведомлений.</string>
     <string name="autostart_permissions_dialog_info">На Вашем устройстве ограничена работа приложения в фоне, что может привести к проблемам с автоматической проверкой новых проектов и сообщений. На следующем экране добавьте приложение в список исключений или отключите оптимизацию для него.</string>
+    <string name="developer_notify">Вопросы, связанные с работой сервиса (ошибки, недовольства, претензии) отправляйте по адресу https://freelancehunt.com/support\n\nПожалуйста, не используйте отзывы в Google Play для этого, т.к. я ничем не могу помочь.\n\nДанное приложение не является официальным приложением и разрабатывается на общественных началах.</string>
+    <string name="buy_premium">Премиум</string>
 </resources>
