[*] Fix en locale

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="verified">Verified</string>
     <string name="threads">Messages</string>
     <string name="my_bids">My bids</string>
-    <string name="my_contests">Мои конкурсы</string>
+    <string name="my_contests">My contests</string>
     <string name="for_plus">For Plus profile</string>
     <string name="is_plus">Plus profile</string>
     <string name="isreaded">Readed</string>
